# terminal-portfolio

./: .gitignore  .graphifyignore  CONVENTIONS.md  Cargo.toml  README.md  astro.config.mjs  firecrawl_skill.md  index.html  package-lock.json  package.json  terminal-portfolio-1ac43e9897b7067f.js  terminal-portfolio-1ac43e9897b7067f_bg.wasm  terminal-portfolio-3afb36e8f4ab6812.js  terminal-portfolio-3afb36e8f4ab6812_bg.wasm  terminal-portfolio-93db16e34c23eb82.js  terminal-portfolio-93db16e34c23eb82_bg.wasm
.github/workflows/: deploy.yml
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
public/: site.webmanifest
src/: app.rs  lib.rs  main.rs  terminal.rs
src/components/: Terminal.tsx
src/pages/: index.astro
src/styles/: global.css
src/types/: terminal.ts
src/utils/: commands.ts  commands.tsx  fileSystem.ts
style/: input.css  output.css
