[package]
name = "terminal-portfolio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# CORE LEPTOS (Stable)
leptos = { version = "0.7.0", features = ["csr"] }
leptos_router = { version = "0.7.0" }
leptos_meta = { version = "0.7.0" }

# BROWSER UTILS
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "KeyboardEvent",
  "Window",
  "Location",
  "Element",
  "HtmlElement",
  "HtmlAnchorElement",
  "HtmlDivElement",
] }

# SSR DEPENDENCIES (Optional)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
leptos_axum = { version = "0.7", optional = true }

[features]
default = ["csr"]

# FIX 1: Only enable 'csr' on the main leptos package.
# leptos_meta and leptos_router do NOT need this flag anymore.
csr = ["leptos/csr"]

hydrate = ["leptos/hydrate"]

# FIX 2: Ensure these map correctly to the optional dependencies above
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

# --- Metadata for Trunk (It largely ignores this, but good to keep) ---
[package.metadata.leptos]
output-name = "terminal-portfolio"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/output.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["csr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
